--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
     </nav>
 
     <header class="hero">
-        <h1>Hi, I'm <span style="color:var(--primary)">[Your Name]</span></h1>
-        <p>Full Stack Developer | XAMPP & GitHub Expert</p>
+        <h1>Hi, I'm <span style="color:var(--primary)">name</span></h1>
+        <p>Full Stack Developer</p>
         <a href="#work" class="btn">View My Work</a>
     </header>
 
@@ -59,11 +59,11 @@
         <div class="grid">
             <div class="card">
                 <h3>Project One</h3>
-                <p>A web application built using PHP, MySQL, and hosted locally on XAMPP.</p>
+                <p> web application </p>
             </div>
             <div class="card">
                 <h3>Project Two</h3>
-                <p>A dynamic frontend project pushed and managed via GitHub CLI.</p>
+                <p>A dynamic frontend project pushed a.</p>
             </div>
             <div class="card">
                 <h3>Project Three</h3>
@@ -74,12 +74,12 @@
 
     <section class="container" id="contact" style="text-align: center;">
         <h2 class="section-title">Contact Me</h2>
-        <p>Email: <b>yourname@example.com</b></p>
-        <p>GitHub: <b>github.com/yourusername</b></p>
+        <p>Email: <b>dfsffsname@example.com</b></p>
+        <p>GitHub: <b>github.com/dfgdgdg</b></p>
     </section>
 
     <footer>
-        <p>&copy; 2025 [Your Name]. All Rights Reserved.</p>
+        <p>&copy; 2025 sgsdgdfgdfg. All Rights Reserved.</p>
     </footer>
 
 </body>
